[gd_scene load_steps=3 format=3 uid="uid://ugw3ewlc4gux"]

[ext_resource type="Script" uid="uid://dlq6ffoxu7g5w" path="res://scripts/ui/SaveSelectScreen/saveSelectScreen.gd" id="1_ygn1m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arqvw"]

[node name="SaveSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ygn1m")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -320.0
offset_right = 360.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="SaveSlots" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = 300.0
offset_right = 50.0
offset_bottom = 331.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_arqvw")
text = "Back"

[connection signal="pressed" from="Back" to="." method="_on_back_button_pressed"]
